fix: truncate overflowing text

--- a/src/renderer/assets/styles/index.css
+++ b/src/renderer/assets/styles/index.css
@@ -1,3 +1,6 @@
+@tailwind components;
+@tailwind utilities;
+
 /* Common CSS use by both light and dark themes */
 :root {
   --titleBarHeight: 32px;
@@ -6,34 +9,34 @@
   /*editor*/
   /*Theme color cluster*/
   --themeColor: rgba(33, 181, 111, 1);
-  --themeColor90: rgba(33, 181, 111, .9);
-  --themeColor80: rgba(33, 181, 111, .8);
-  --themeColor70: rgba(33, 181, 111, .7);
-  --themeColor60: rgba(33, 181, 111, .6);
-  --themeColor50: rgba(33, 181, 111, .5);
-  --themeColor40: rgba(33, 181, 111, .4);
-  --themeColor30: rgba(33, 181, 111, .3);
-  --themeColor20: rgba(33, 181, 111, .2);
-  --themeColor10: rgba(33, 181, 111, .1);
+  --themeColor90: rgba(33, 181, 111, 0.9);
+  --themeColor80: rgba(33, 181, 111, 0.8);
+  --themeColor70: rgba(33, 181, 111, 0.7);
+  --themeColor60: rgba(33, 181, 111, 0.6);
+  --themeColor50: rgba(33, 181, 111, 0.5);
+  --themeColor40: rgba(33, 181, 111, 0.4);
+  --themeColor30: rgba(33, 181, 111, 0.3);
+  --themeColor20: rgba(33, 181, 111, 0.2);
+  --themeColor10: rgba(33, 181, 111, 0.1);
   --highlightThemeColor: var(--themeColor);
 
-  --highlightColor: rgba(33, 181, 111, .4);
-  --selectionColor: rgba(0, 0, 0, .1);
-  --editorColor: rgba(0, 0, 0, .7);
-  --editorColor80: rgba(0, 0, 0, .8);
-  --editorColor60: rgba(0, 0, 0, .6);
-  --editorColor50: rgba(0, 0, 0, .5);
-  --editorColor40: rgba(0, 0, 0, .4);
-  --editorColor30: rgba(0, 0, 0, .3);
-  --editorColor10: rgba(0, 0, 0, .1);
-  --editorColor04: rgba(0, 0, 0, .03);
+  --highlightColor: rgba(33, 181, 111, 0.4);
+  --selectionColor: rgba(0, 0, 0, 0.1);
+  --editorColor: rgba(0, 0, 0, 0.7);
+  --editorColor80: rgba(0, 0, 0, 0.8);
+  --editorColor60: rgba(0, 0, 0, 0.6);
+  --editorColor50: rgba(0, 0, 0, 0.5);
+  --editorColor40: rgba(0, 0, 0, 0.4);
+  --editorColor30: rgba(0, 0, 0, 0.3);
+  --editorColor10: rgba(0, 0, 0, 0.1);
+  --editorColor04: rgba(0, 0, 0, 0.03);
   --editorBgColor: rgba(255, 255, 255, 1);
   --deleteColor: #ff6969;
-  --iconColor: #6B737B;
+  --iconColor: #6b737b;
   --codeBgColor: #d8d8d869;
   --codeBlockBgColor: rgba(0, 0, 0, 0.03);
-  --footnoteBgColor: rgba(0, 0, 0, .03);
-  --inputBgColor: rgba(0, 0, 0, .06);
+  --footnoteBgColor: rgba(0, 0, 0, 0.03);
+  --inputBgColor: rgba(0, 0, 0, 0.06);
   --focusColor: var(--themeColor);
 
   --buttonFontColor: var(--editorColor);
@@ -51,7 +54,7 @@
   --buttonPrimaryFontColor: #ffffff;
   --buttonPrimaryBgColor: var(--themeColor);
   --buttonPrimaryBorder: none;
-  --buttonPrimaryShadow: 0 0 8px 0 rgba(0, 0, 0, .1);
+  --buttonPrimaryShadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
   --buttonPrimaryFontColorHover: var(--buttonPrimaryFontColor);
   --buttonPrimaryBgColorHover: var(--buttonPrimaryBgColor);
   --buttonPrimaryBorderHover: var(--buttonPrimaryBorder);
@@ -59,24 +62,26 @@
   --buttonPrimaryBgColorActive: var(--buttonPrimaryBgColor);
   --buttonPrimaryBorderActive: var(--buttonPrimaryBorder);
   --buttonPrimaryFocusBorder: none;
-  --buttonPrimaryFocusShadow: inset 0 0 0 1px rgba(13, 91, 55, 0.5), 0 0 0 1px var(--themeColor);
+  --buttonPrimaryFocusShadow: inset 0 0 0 1px rgba(13, 91, 55, 0.5),
+    0 0 0 1px var(--themeColor);
   --tableBorderColor: #e5e5e5;
 
   /*marktext*/
-  --sideBarColor: rgba(0, 0, 0, .6);
+  --sideBarColor: rgba(0, 0, 0, 0.6);
   --sideBarIconColor: var(--iconColor);
   --sideBarTitleColor: rgba(0, 0, 0, 1);
-  --sideBarTextColor: rgba(0, 0, 0, .4);
+  --sideBarTextColor: rgba(0, 0, 0, 0.4);
   --sideBarBgColor: rgba(242, 242, 242, 0.9);
-  --sideBarItemHoverBgColor: rgba(0, 0, 0, .03);
+  --sideBarItemHoverBgColor: rgba(0, 0, 0, 0.03);
   --itemBgColor: rgba(255, 255, 255, 0.6);
 
-  --floatFontColor: rgba(0, 0, 0, .6);
+  --floatFontColor: rgba(0, 0, 0, 0.6);
   --floatBgColor: #fff;
-  --floatHoverColor: rgba(0, 0, 0, .04);
-  --floatBorderColor: rgba(0, 0, 0, .1);
-  --floatShadow: rgba(15, 15, 15, 0.03) 0px 0px 0px 1px, rgba(15, 15, 15, 0.04) 0px 3px 6px, rgba(15, 15, 15, 0.05) 0px 9px 24px;
-  --maskColor: rgba(232, 232, 232, .8);
+  --floatHoverColor: rgba(0, 0, 0, 0.04);
+  --floatBorderColor: rgba(0, 0, 0, 0.1);
+  --floatShadow: rgba(15, 15, 15, 0.03) 0px 0px 0px 1px,
+    rgba(15, 15, 15, 0.04) 0px 3px 6px, rgba(15, 15, 15, 0.05) 0px 9px 24px;
+  --maskColor: rgba(232, 232, 232, 0.8);
 
   /* Notification colors */
   --notificationPrimaryColor: #ffffff;
@@ -110,7 +115,8 @@
   outline: none;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   background: transparent !important;
@@ -128,7 +134,8 @@ body {
 }
 
 .icon {
-  width: 1em; height: 1em;
+  width: 1em;
+  height: 1em;
   vertical-align: -0.15em;
   fill: currentColor;
   overflow: hidden;
@@ -148,16 +155,16 @@ body {
   border: solid 1px var(--floatBorderColor);
 }
 
-.el-tooltip__popper[x-placement^=left] .popper__arrow {
+.el-tooltip__popper[x-placement^='left'] .popper__arrow {
   border-bottom-color: var(--floatBorderColor);
 }
-.el-tooltip__popper[x-placement^=top] .popper__arrow {
+.el-tooltip__popper[x-placement^='top'] .popper__arrow {
   border-bottom-color: var(--floatBorderColor);
 }
-.el-tooltip__popper[x-placement^=right] .popper__arrow {
+.el-tooltip__popper[x-placement^='right'] .popper__arrow {
   border-bottom-color: var(--floatBorderColor);
 }
-.el-tooltip__popper[x-placement^=bottom] .popper__arrow {
+.el-tooltip__popper[x-placement^='bottom'] .popper__arrow {
   border-bottom-color: var(--floatBorderColor);
 }
 
@@ -231,7 +238,7 @@ div.el-tab-pane {
 }
 
 .ag-underdevelop {
-  opacity: .3;
+  opacity: 0.3;
   pointer-events: none;
   cursor: not-allowed;
 }
@@ -315,7 +322,7 @@ button.button-primary:not(.custom):focus,
 .el-button--primary.disabled,
 .el-button--primary[disabled] {
   cursor: not-allowed !important;
-  opacity: .65 !important;
+  opacity: 0.65 !important;
   box-shadow: none !important;
 }
 
